# askama

./: .gitattributes  .readthedocs.yaml  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
askama/: Cargo.toml
askama/src/: either.rs  helpers.rs  lib.rs
askama_actix/: Cargo.toml  README.md
askama_actix/src/: lib.rs
askama_axum/: Cargo.toml  README.md
askama_axum/src/: lib.rs
askama_derive/: Cargo.toml  README.md  build.rs
askama_derive/src/: config.rs  filter_fn.rs  generator.rs  heritage.rs  input.rs  integration.rs  lib.rs  spans.rs  tests.rs
askama_derive_standalone/: Cargo.toml
askama_escape/: Cargo.toml  README.md
askama_escape/src/: lib.rs
askama_macros/: Cargo.toml  README.md
askama_macros/src/: lib.rs
askama_parser/: Cargo.toml  README.md
askama_parser/src/: expr.rs  lib.rs  node.rs  target.rs  tests.rs
askama_rocket/: Cargo.toml  README.md
askama_rocket/src/: lib.rs
askama_warp/: Cargo.toml  README.md
askama_warp/src/: lib.rs
bench-build/: Cargo.toml  README.md
book/: book.toml  update-theme.py
book/src/: configuration.md  creating_templates.md  features.md  filters.md  frameworks.md  introduction.md  performance.md  template_syntax.md  upgrading.md
examples/actix-web-app/: Cargo.toml  README.md
examples/axum-app/: Cargo.toml  README.md
examples/custom-escaper/: Cargo.toml  README.md  askama.toml
examples/custom-escaper/src/: main.rs
examples/poem-app/: Cargo.toml  README.md
examples/rocket-app/: Cargo.toml  README.md
examples/salvo-app/: Cargo.toml
examples/warp-app/: Cargo.toml  README.md
fuzzing/fuzz/: Cargo.toml
rinja/: Cargo.toml
rinja/src/: lib.rs
rinja_derive/: Cargo.toml  README.md
rinja_derive/src/: lib.rs
rinja_parser/: Cargo.toml  README.md
rinja_parser/src/: lib.rs
scripts/make-buffer-write_token_str/: Cargo.toml
testing/: Cargo.toml
testing-alloc/: Cargo.toml
testing-alloc/tests/: hello-world.rs
testing-no-std/: Cargo.toml
testing-no-std/templates/: hello-world.html
testing-no-std/tests/: hello-world.rs
testing-renamed/: Cargo.toml
testing-renamed/tests/: hello-world.rs
testing/templates/: extend-duplicated.html  extend_and_import.html  include-nested.html  let-decl.html  let-shadow.html  lookup-configured-then-same-dir.html
testing/tests/: array.rs  book-examples.rs  book_example_performance_fmt_call_fast_writable.rs  calls.rs  clippy_lints.rs  compound-assignment.rs  conditional-expr.rs  cow_str_implements_fast_writable.rs  create.rs  custom_ui.rs  declare.rs  default.rs  enum.rs  extend.rs  filter_block.rs  filters.rs  generics.rs  if_let.rs  include.rs  let.rs  let_destructoring.rs  literal.rs  lookup-include-same-dir.html  lookup-same-path.html  lookup.rs  macro-include.rs  macro.rs  no_implicit_prelude.rs  paths.rs  print.rs  recursive-template.rs  simple.rs  try.rs  (+3 more)
(+144 files in other folders)
