[package]
name = "askama_escape"
version.workspace = true
description = "HTML escaping, extracted from Askama"
keywords = ["html", "escaping"]
categories = ["no-std", "no-std::no-alloc"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]

[[bench]]
name = "all"
harness = false

[dev-dependencies]
criterion = "0.8"
