[package]
name = "askama_rocket"
version = "0.13.0+deprecated"
description = "Integration crates like `askama_rocket` were removed from askama 0.13."
homepage = "https://crates.io/crates/askama"
repository = "https://github.com/rinja-rs/rinja"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]
