[package]
name = "bench-build"
version = "0.0.0"
authors = ["askama-rs developers"]
edition = "2024"
rust-version = "1.88"
publish = false

[dependencies]
askama = { path = "../askama", default-features = false, features = ["std"] }
askama_macros = { path = "../askama_macros", version = "0.15.1", features = ["std"] }

[features]
default = []
derive = ["askama/derive"]

[workspace]
members = ["."]
